--- a/scss/_main_home.scss
+++ b/scss/_main_home.scss
@@ -48,9 +48,9 @@ p {
 }
 
 #img-fondo-home {
-    display: flex;
+    /*display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center;*/
     height: 100vh;
     background-image: url("/img/Portada4.jpg");
     background-color: rgba(0,0,0,.6);
@@ -60,6 +60,16 @@ p {
 }
 
 /* Aparición bloque informativo */
+
+.cta {
+    bottom: 0;
+    left: 0;
+    padding-bottom: 2rem;
+    position: absolute;
+    right: 0;
+    text-align: center;
+    z-index: 4;
+}
 
 #aparecion-info {
     @extend #aparicion-home;
@@ -81,7 +91,14 @@ p {
     }
 }
 
-/* Estilos bloque informativo */
+#h3-cta {
+    margin-top: 0em;
+    margin-bottom: 1em;
+    font-size: large;
+    color: white;
+}
+
+/* Botón con efecto Glitch */
 
 .btn-intro {
     width: 320px;
@@ -124,9 +141,9 @@ p {
 .btn-intro:hover::after {
     animation: 1s glitch;
     animation-timing-function: steps(2, end);
-  }
+}
   
-  @keyframes glitch {
+@keyframes glitch {
     0% {
       clip-path: var(--slice-1);
       transform: translate(-20px, -10px);
@@ -171,38 +188,6 @@ p {
       clip-path: var(--slice-1);
       transform: translate(0);
     }
-  }
-
-.cta {
-    bottom: 0;
-    left: 0;
-    padding-bottom: 2rem;
-    position: absolute;
-    right: 0;
-    text-align: center;
-    z-index: 4;
-}
-
-#h3-cta {
-    margin-top: 0em;
-    margin-bottom: 1em;
-    font-size: large;
-    color: white;
-}
-
-.btn-cta {
-    border-bottom: 2px solid red;
-    text-decoration: none;
-    display: inline-block;
-    padding: 0 2em 0.7em;
-    margin-bottom: 10px;
-    text-align: center;
-    vertical-align: middle;
-    color: white;
-}
-
-.btn-cta:hover {
-    color: red;
 }
 
 #mas-info {
@@ -267,7 +252,7 @@ main {
             justify-content:center;
             align-items: center;
             padding-bottom: 1.5em;
-            p {
+            p.a-mano {
                 font-family: 'Nanum Pen Script', cursive;
                 font-size: 30px;
                 text-align: center;
@@ -282,31 +267,23 @@ main {
 -------------------------------------------------- */
 
 main {
-    section.container {
-        display: flex;
-        flex-flow: row wrap;
-        justify-content:space-evenly;
-        align-items: center;
-        h2.h2-home {
-            padding-top: 3em;
-            text-align: center;
-            font-size: 2.2em;
-        }
+    h2.h2-home {
+        padding-top: 3em;
+        text-align: center;
+        font-size: 2em;
+    }
+    section{
         div {
-            justify-content: center;
             img {
                 width: 100%;
             }
         }
         div#columna {
-            ul {
-                display: flex;
-                flex-flow: column nowrap;
-                align-items: center;
+            ul { 
                 list-style: none;
                 margin: 0;
                 padding: 0;
-                li {
+                li.row {
                     a.btn-buy {
                         border-bottom: 2px solid red;
                         text-decoration: none;
@@ -326,8 +303,23 @@ main {
         }
     }
     article.container { // Sección final de texto
-        padding-bottom: 2em;
+        padding-bottom: 4em;
     }
+}
+
+.btn-cta {
+    border-bottom: 2px solid red;
+    text-decoration: none;
+    display: inline-block;
+    padding: 0 2em 0.7em;
+    margin-bottom: 10px;
+    text-align: center;
+    vertical-align: middle;
+    color: white;
+}
+
+.btn-cta:hover {
+    color: red;
 }
 
 .btn-wp {
@@ -339,13 +331,15 @@ main {
 }
 
 
+
+
 /* RESPONSIVE
 -------------------------------------------------- */
 
 
 @media only screen and (max-width: 1024px) {
     
-    article p {
+    article p, .h2-home {
         margin-left: 1.5em;
         margin-right: 1.5em;
     }
